--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 	"backend"
   ],
   "scripts": {
-    "dev": "concurrently \"npm run dev --prefix frontend\" \"npm run start:dev --prefix backend\""
+    "start": "concurrently \"npm run start --prefix frontend\" \"npm run start --prefix backend\"",
+    "dev": "concurrently \"npm run start --prefix frontend\" \"npm run start --prefix backend\""
   },
   "devDependencies": {
     "concurrently": "^9.0.0"
