--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 	"backend"
   ],
   "scripts": {
+    "build": "concurrently \"npm run build --prefix frontend\" \"npm run build --prefix backend\"",
     "start": "concurrently \"npm run start --prefix frontend\" \"npm run start --prefix backend\"",
     "dev": "concurrently \"npm run dev --prefix frontend\" \"npm run start:dev --prefix backend\""
   },
