--- a/scripts/postsmtp/.env.example
+++ b/scripts/postsmtp/.env.example
@@ -15,3 +15,10 @@ SMTP_CLIENT_HOSTNAME=localhost
 SMTP_RELAY=false
 SMTP_REQUIRE_TLS=false
 
+# TLS/STARTTLS Configuration
+# Set SMTP_TLS_ENABLED=true to enable STARTTLS (advertises it in EHLO)
+SMTP_TLS_ENABLED=false
+# Path to TLS certificate file (PEM format)
+SMTP_TLS_CERT_FILE=cert.pem
+# Path to TLS private key file (PEM format)
+SMTP_TLS_KEY_FILE=key.pem
