--- a/scripts/postsmtp/.env.example
+++ b/scripts/postsmtp/.env.example
@@ -7,11 +7,11 @@ DB_NAME=postgres
 DB_SSLMODE=disable
 
 # SMTP Server Configuration
-SMTP_SERVER_HOSTNAME=localhost
+SMTP_SERVER_HOSTNAME=haydenholmes.dev
 SMTP_SERVER_PORT=2525
 SMTP_SERVER_ADDRESS=0.0.0.0
 SMTP_SERVER_DOMAIN=localhost
-SMTP_CLIENT_HOSTNAME=localhost
+SMTP_CLIENT_HOSTNAME=haydenholmes.dev
 SMTP_RELAY=false
 SMTP_REQUIRE_TLS=false
 
