--- a/backend/package.json
+++ b/backend/package.json
@@ -31,8 +31,8 @@
     "class-validator": "^0.14.2",
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.2",
-    "typeorm": "^0.3.27",
+    "rxjs": "7.2.0",
+    "typeorm": "0.3.21",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
