--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,5 +1,6 @@
-﻿# Backend API Configuration
-API_BASE_URL=http://localhost:3000
+﻿# Backend API Base URL
+# Use either NUXT_PUBLIC_API_BASE_URL (recommended) or API_BASE_URL
+NUXT_PUBLIC_API_BASE_URL=http://localhost:3000
 
-# Frontend Dev Server
+# Frontend Server Port (optional, defaults to 443)
 PORT=3001
