--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,4 +1,4 @@
-﻿# PostgreSQL Configuration
+﻿# PostgreSQL Database Configuration
 DB_HOST=localhost
 DB_PORT=5432
 DB_USER=postgres
@@ -6,13 +6,19 @@ DB_PASSWORD=your_password_here
 DB_NAME=postgres
 DB_SSLMODE=disable
 
-# JWT Configuration
+# JWT Authentication Configuration
 JWT_SECRET=your_jwt_secret_key_here_change_in_production
 JWT_EXPIRES_IN=7d
 
 # Server Configuration
 PORT=3000
-FRONTEND_URL=localhost:3001
+FRONTEND_URL=http://localhost:3001
 
 # Email Configuration
-HOSTNAME=mydomain.com
+HOSTNAME=localhost
+
+# Encryption Configuration (for email encryption)
+ENCRYPTION_KEY=your-32-character-encryption-key-here!!
+
+# API Key for postsmtp service
+POSTSMTP_API_KEY=your-secure-api-key-here
