--- a/scripts/postsmtp/.env.example
+++ b/scripts/postsmtp/.env.example
@@ -1,24 +1,15 @@
-# PostgreSQL Configuration
-DB_HOST=localhost
-DB_PORT=5432
-DB_USER=postgres
-DB_PASSWORD=your_password
-DB_NAME=postgres
-DB_SSLMODE=disable
+﻿# Backend API Configuration
+BACKEND_API_URL=http://localhost:3000
+POSTSMTP_API_KEY=your-secure-api-key-here
 
 # SMTP Server Configuration
-SMTP_SERVER_HOSTNAME=haydenholmes.dev
+SMTP_SERVER_HOSTNAME=localhost
 SMTP_SERVER_PORT=2525
 SMTP_SERVER_ADDRESS=0.0.0.0
 SMTP_SERVER_DOMAIN=localhost
-SMTP_CLIENT_HOSTNAME=haydenholmes.dev
-SMTP_RELAY=false
-SMTP_REQUIRE_TLS=false
+SMTP_CLIENT_HOSTNAME=localhost
 
-# TLS/STARTTLS Configuration
-# Set SMTP_TLS_ENABLED=true to enable STARTTLS (advertises it in EHLO)
+# TLS Configuration (optional)
 SMTP_TLS_ENABLED=false
-# Path to TLS certificate file (PEM format)
-SMTP_TLS_CERT_FILE=cert.pem
-# Path to TLS private key file (PEM format)
-SMTP_TLS_KEY_FILE=key.pem
+SMTP_TLS_CERT_FILE=
+SMTP_TLS_KEY_FILE=
