change encryption to user based

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -17,8 +17,9 @@ FRONTEND_URL=http://localhost:3001
 # Email Configuration
 HOSTNAME=localhost
 
-# Encryption Configuration (for email encryption)
-ENCRYPTION_KEY=your-32-character-encryption-key-here!!
+# Encryption Configuration (Master key for encrypting user-specific keys)
+# This key encrypts user-specific encryption keys stored in the database
+ENCRYPTION_MASTER_KEY=your-32-character-master-key-here!!
 
 # API Key for postsmtp service
 POSTSMTP_API_KEY=your-secure-api-key-here
