--- a/backend/.env.example
+++ b/backend/.env.example
@@ -18,7 +18,11 @@ FRONTEND_URL=http://localhost:3001
 HOSTNAME=localhost
 
 # Encryption Configuration (Master key for encrypting user-specific keys)
-# This key encrypts user-specific encryption keys stored in the database
+# This master key encrypts user-specific encryption keys stored in the database.
+# User-specific keys are used to encrypt:
+#   - User email addresses
+#   - PGP private keys (PGP public keys are stored unencrypted)
+# Each user has their own encryption key, which is encrypted with this master key.
 ENCRYPTION_MASTER_KEY=your-32-character-master-key-here!!
 
 # API Key for postsmtp service
