--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,6 +1,20 @@
-﻿# Backend API Base URL
-# Use either NUXT_PUBLIC_API_BASE_URL (recommended) or API_BASE_URL
-NUXT_PUBLIC_API_BASE_URL=http://localhost:3000
-
-# Frontend Server Port (optional, defaults to 443)
+﻿# Frontend Server Configuration
+# Port for the frontend server (default: 3001 for HTTP, 443 for HTTPS)
 PORT=3001
+
+# Enable HTTPS for the frontend
+# Set to 'true' to enable HTTPS (requires certificates)
+# For development, setting to 'true' without certificates will auto-generate self-signed certs
+ENABLE_HTTPS=false
+
+# HTTPS Certificate Configuration (optional, only needed if ENABLE_HTTPS=true)
+# Paths are relative to the frontend directory
+# For production, use proper SSL certificates from a Certificate Authority
+# For development, you can generate self-signed certificates or use mkcert
+HTTPS_KEY_PATH=./certs/key.pem
+HTTPS_CERT_PATH=./certs/cert.pem
+
+# Backend API Base URL
+# Use either NUXT_PUBLIC_API_BASE_URL (recommended) or API_BASE_URL
+# If backend is also using HTTPS, use https:// instead of http://
+NUXT_PUBLIC_API_BASE_URL=http://localhost:3000
