--- a/backend/package.json
+++ b/backend/package.json
@@ -26,10 +26,12 @@
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/platform-express": "^10.4.20",
     "@nestjs/typeorm": "^10.0.2",
+    "@types/cookie-parser": "^1.4.10",
     "@types/uuid": "^10.0.0",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "cookie-parser": "^1.4.7",
     "openpgp": "^6.2.2",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.2.2",
