--- a/backend/.env.example
+++ b/backend/.env.example
@@ -14,6 +14,17 @@ JWT_EXPIRES_IN=7d
 PORT=3000
 FRONTEND_URL=http://localhost:3001
 
+# HTTPS Configuration
+# Set to 'true' to enable HTTPS (requires certificates)
+ENABLE_HTTPS=false
+
+# HTTPS Certificate Configuration (optional, only needed if ENABLE_HTTPS=true)
+# Paths are relative to the backend directory or absolute paths
+# For production, use proper SSL certificates from a Certificate Authority
+# For development, you can generate self-signed certificates or use mkcert
+HTTPS_KEY_PATH=./certs/key.pem
+HTTPS_CERT_PATH=./certs/cert.pem
+
 # Email Configuration
 HOSTNAME=localhost
 
