--- a/backend/.env.example
+++ b/backend/.env.example
@@ -15,13 +15,15 @@ PORT=3000
 FRONTEND_URL=http://localhost:3001
 
 # HTTPS Configuration
-# Set to 'true' to enable HTTPS (requires certificates)
+# Set to 'true' to enable HTTPS (REQUIRES certificate files)
+# Certificate files must be provided - no auto-generation
 ENABLE_HTTPS=false
 
-# HTTPS Certificate Configuration (optional, only needed if ENABLE_HTTPS=true)
+# HTTPS Certificate Configuration (REQUIRED if ENABLE_HTTPS=true)
 # Paths are relative to the backend directory or absolute paths
 # For production, use proper SSL certificates from a Certificate Authority
-# For development, you can generate self-signed certificates or use mkcert
+# Example: Generate self-signed certificates for development:
+#   openssl req -x509 -newkey rsa:2048 -keyout certs/key.pem -out certs/cert.pem -days 365 -nodes
 HTTPS_KEY_PATH=./certs/key.pem
 HTTPS_CERT_PATH=./certs/cert.pem
 
