--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -3,18 +3,20 @@
 PORT=3001
 
 # Enable HTTPS for the frontend
-# Set to 'true' to enable HTTPS (requires certificates)
-# For development, setting to 'true' without certificates will auto-generate self-signed certs
+# Set to 'true' to enable HTTPS (REQUIRES certificate files)
+# Certificate files must be provided - no auto-generation
 ENABLE_HTTPS=false
 
-# HTTPS Certificate Configuration (optional, only needed if ENABLE_HTTPS=true)
-# Paths are relative to the frontend directory
+# HTTPS Certificate Configuration (REQUIRED if ENABLE_HTTPS=true)
+# Paths are relative to the frontend directory or absolute paths
 # For production, use proper SSL certificates from a Certificate Authority
-# For development, you can generate self-signed certificates or use mkcert
+# Example: Generate self-signed certificates for development:
+#   openssl req -x509 -newkey rsa:2048 -keyout certs/key.pem -out certs/cert.pem -days 365 -nodes
 HTTPS_KEY_PATH=./certs/key.pem
 HTTPS_CERT_PATH=./certs/cert.pem
 
 # Backend API Base URL
 # Use either NUXT_PUBLIC_API_BASE_URL (recommended) or API_BASE_URL
 # If backend is also using HTTPS, use https:// instead of http://
+# If not set, will auto-detect from current page location
 NUXT_PUBLIC_API_BASE_URL=http://localhost:3000
