--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   ],
   "scripts": {
     "build": "concurrently \"npm run build --prefix frontend\" \"npm run build --prefix backend\"",
-    "start": "concurrently \"npm run start --prefix frontend\" \"npm run start --prefix backend\"",
+    "start": "concurrently \"npm run start --prefix frontend\" \"npm run start:prod --prefix backend\"",
     "dev": "concurrently \"npm run dev --prefix frontend\" \"npm run start:dev --prefix backend\""
   },
   "devDependencies": {
